# auramask

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  alg1.ipynb  colorspace.sbatch  dataset-process.py  environment.yml  experiment.ipynb  export.py  face-test.ipynb  face_validation.py  face_verification.py  grid.sbatch  grid.sh  pair-ds.ipynb  pyproject.toml  reface_loss.ipynb  requirements-dev.txt  requirements.txt  ruff.toml  test.py  train.py  train.sh  train_set.sh  unet.py  unet_test.ipynb
auramask/: __init__.py
compiled/: lpips_squeeze.keras  lpips_squeeze_spatial.keras  nima_aesthetic_imagenet.keras  nima_aesthetic_inceptionresnetv2.keras  nima_aesthetic_nasnetmobile.keras  nima_technical_mobilenet.keras
conversion_scripts/: lpips_convert.py  squeezenet_convert.py
loss/: reface.py  reface_loss.ipynb
losses/: reface.py  reface_loss.ipynb
model_configs/: attention-unet-untrained.json  attention-unet.json  maxim-enh.json  reface-unet-paper.json  reface-unet.json  res-unet-a.json  res-unet-shallow.json  res-unet-zero-dce-128.json  res-unet-zero-dce-256.json  res-unet-zero-dce-32.json  res-unet-zero-dce-64.json  res-unet.json  res-zero-dce-128.json  res-zero-dce-256.json  res-zero-dce-32.json  res-zero-dce-64.json  res-zero-dce.json  unet-med.json  unet-shallow.json  unet-small.json  unet.json  vnet-med.json  vnet.json  zero-dce.json
models/: auramask.py  unet.py
notebooks/: alg1.ipynb  auramask_loss.ipynb  face-test.ipynb  fdf_experiments.ipynb  mtcnn-extraction.ipynb  pair-ds.ipynb  reface_loss.ipynb  reface_metrics.ipynb  (+1 more)
(+215 files in other folders)
